@startuml Dominio_Core
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b><u>x</u></b>
!define foreign_key(x) <i>x</i>

title Diagrama de Entidades - Dominio Core Service (Estructura Académica)

' ===========================
' DOMINIO CORE - SOLO ESTRUCTURA ORGANIZACIONAL
' ===========================

entity "Facultad" as facultad {
  primary_key(id): UUID
  --
  nombre: VARCHAR(255)
  codigo: VARCHAR(50) UNIQUE
  descripcion: TEXT
  estado: BOOLEAN
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "Escuela" as escuela {
  primary_key(id): UUID
  --
  foreign_key(id_facultad): UUID
  nombre: VARCHAR(255)
  codigo: VARCHAR(50) UNIQUE
  descripcion: TEXT
  estado: BOOLEAN
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "LineaFacultad" as linea {
  primary_key(id): UUID
  --
  foreign_key(id_escuela): UUID
  nombre: VARCHAR(255)
  codigo: VARCHAR(50)
  estado: BOOLEAN
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

' Relaciones
facultad ||--o{ escuela : "contiene"
escuela ||--o{ linea : "tiene"

note right of facultad
  **Facultad**
  Representa las facultades
  de la universidad
  
  Ejemplos:
  - FIA (Ing. y Arquitectura)
  - Ciencias de la Salud
  - Ciencias Empresariales
  
  Estado: 
  - true = activo
  - false = inactivo
end note

note right of escuela
  **Escuela Profesional**
  Carreras específicas
  dentro de facultades
  
  Ejemplos (FIA):
  - Ingeniería de Sistemas
  - Ingeniería Civil
  - Arquitectura
  
  Estado:
  - true = activo
  - false = inactivo
end note

note right of linea
  **Línea Facultad**
  Líneas de investigación
  o especialización por escuela
  
  Ejemplos (Ing. Sistemas):
  - Desarrollo de Software
  - Redes y Comunicaciones
  - Inteligencia Artificial
  - Ciberseguridad
  
  Estado:
  - true = activo
  - false = inactivo
end note

note bottom of linea
  **IMPORTANTE:**
  Los usuarios (Alumno, Supervisor, 
  Secretaria, Coordinador) están en 
  el AUTH SERVICE, no en Core Service.
  
  Solo almacenan referencia a 
  id_escuela como dato externo.
end note

legend right
  **Base de Datos:** ppp_core
  
  **Responsabilidad:**
  Gestión de estructura organizacional
  académica de la universidad
  
  **No incluye:**
  Usuarios especializados (están en ppp_auth)
  
  **Relación con otros servicios:**
  - Auth Service consulta id_escuela
  - Compañías Service consulta id_escuela
  - Evaluaciones Service consulta id_linea_facultad
endlegend

@enduml
